# teleinfo-nom

./: Cargo.toml  Readme.md
.github/workflows/: publish.yml
assets/: message.txt  message_standard.txt  stream_legacy_complete.txt  stream_legacy_incomplete.txt  stream_legacy_raw.txt  stream_standard_complete.txt  stream_standard_raw.txt
src/: lib.rs
src/parser/: mod.rs  tags.rs
