[package]
name = "teleinfo-nom"
version = "0.1.0"
authors = ["Gaëtan Duchaussois <gaetan-github@pignouf.fr>"]
edition = "2018"
readme = "Readme.md"
keywords = [ "teleinfo", "sensor", "power"]
categories = ["hardware-support","parser-implementations","os"]
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
chrono = "0.4"
