[package]
name = "teleinfo-nom"
description = "A library to parse teleinfo stream from french meters"
version = "0.1.0"
authors = ["Gaëtan Duchaussois <gaetan-github@pignouf.fr>"]
edition = "2018"
repository = "https://github.com/gaetronik/teleinfo-nom"
readme = "Readme.md"
keywords = [ "teleinfo", "sensor", "power"]
categories = ["hardware-support","parser-implementations","os"]
license = "WTFPL"

[badges]
travis-ci = { repository = "gaetronik/teleinfo-nom", branch = "master" }

[dependencies]
nom = "5"
chrono = "0.4"
